# bbp-workflow-svc

./: AUTHORS.txt  CHANGELOG.rst  Dockerfile  MANIFEST.in  Makefile  README.rst  entrypoint.sh  luigi.cfg  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: dockerhub.yml  tox.yml
bbp_workflow_svc/: auth.py  main.py  settings.py  util.py
bbp_workflow_svc/templates/: post.html
tests/: test_main.py
